@startuml laporan_emiten

!theme blueprint
  entity neraca_keuangan {
    <color:yellow> id: <<PK>> <<UUID>></color>
    ** aset: bigint **
    ** kas_dan_setara_kas: bigint **
    ** piutang: bigint **
    ** persediaan: bigint **
    ** aset_lancar: bigint **
    ** aset_tidak_lancar: bigint **
    ** liabilitas_jangka_pendek: bigint **
    ** liabilitas_jangka_panjang: bigint **
    ** liabilitas_berbunga: bigint **
    ** ekuitas: bigint **
    <color:yellow> created_at: datetime</color>
    <color:yellow> updated_at: datetime</color>
    <color:yellow> deleted_at: datetime</color>
  }

  entity laba_rugi {
    <color:yellow> id: <<PK>> <<UUID>></color>
    ** pendapatan: bigint **
    ** laba_kotor: bigint **
    ** laba_usaha: bigint **
    ** beban_bunga: bigint **
    ** laba_sebelum_pajak: bigint **
    ** laba_bersih: bigint **
    <color:yellow> created_at: datetime</color>
    <color:yellow> updated_at: datetime</color>
    <color:yellow> deleted_at: datetime</color>
  }

  entity arus_kas {
    <color:yellow> id: <<PK>> <<UUID>></color>
    ** operasi: bigint **
    ** investasi: bigint **
    ** pendanaan: bigint **
    <color:yellow> created_at: datetime</color>
    <color:yellow> updated_at: datetime</color>
    <color:yellow> deleted_at: datetime</color>
  }

  entity emiten {
    <color:yellow> id: <<PK>> <<UUID>></color>
    ** kode_emiten: varchar(4) **
    ** nama_emiten: varchar(255) **
    ** jumlah_saham: bigint **
    <color:yellow> created_at: datetime</color>
    <color:yellow> updated_at: datetime</color>
    <color:yellow> deleted_at: datetime</color>
  }

  entity dividen {
    <color:yellow> id: <<PK>> <<UUID>></color>
    ** cash: integer(6) **
    <color:yellow> created_at: datetime</color>
    <color:yellow> updated_at: datetime</color>
    <color:yellow> deleted_at: datetime</color>
  }
  entity laporan_keuangan {
    <color:yellow> id: <<PK>> <<UUID>></color>
    ** emiten_id: <<FK>> <<UUID>> **
    ** jenis_laporan: enum('Q1', 'Q2', 'Q3', 'TAHUNAN') **
    ** tanggal: date **
    ** harga_saham: integer(6) **
    ** nama_file: varchar(255) **
    <color:yellow> created_at: datetime</color>
    <color:yellow> updated_at: datetime</color>
    <color:yellow> deleted_at: datetime</color>
  }

  entity user {
    <color:yellow> id: <<PK>> <<UUID>></color>
    ** nama_lengkap: varchar(128) **
    <color:yellow> email: <<PK>> varchar(128)</color>
    ** password: varchar(255) **
    ** role: enum('user', 'admin') **
    <color:yellow> created_at: datetime</color>
    <color:yellow> updated_at: datetime</color>
    <color:yellow> deleted_at: datetime</color>
  }

  ' relationship
  emiten |o--o{ laporan_keuangan
  laporan_keuangan |o--o| neraca_keuangan
  laporan_keuangan |o--o| laba_rugi
  laporan_keuangan |o--o| arus_kas
  laporan_keuangan |o--o| dividen
@enduml